testing/framework/resources/Advanced/Failing/mondrian/query6279.e
USA	CA	Daly City	1924	Donald Davis	Donald Davis	M	S	Bachelors Degree	$50K - $70K
